Bug 357817 - Spectacle does not remember Save As location
Summary: Spectacle does not remember Save As location
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-10 22:12 UTC by Kai Uwe Broulik
Modified: 2016-01-11 19:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2016-01-10 22:12:49 UTC
When I choose "Save As" from the "Save & Exit" dropdown menu and save a screenshot, the location is not remembered when I launch Spectacle again later.

Also, the default location is $HOME for when I launch it from krunner and / when launched from keyboard shortcut. It should default to the default save location configured, if no previous location is stored.

Reproducible: Always

Steps to Reproduce:
1. Open spectacle
2. Click the drop down arrow next to "Save & Exit"
3. Save somewhere
4. Close Spectacle
5. repeat

Actual Results:  
The previous location is not remembered and the dialog opens in either $HOME or /

Expected Results:  
The previous location is remembered and if there is none it opens in the default save locations (eg Pictures folder)
Comment 1 Sebastian Trueg 2016-01-11 14:05:32 UTC
I second this. In the old days this was easy to fix by using a null pointer in the save dialog creation.
Comment 2 Boudhayan Gupta 2016-01-11 19:07:08 UTC
Git commit 33aa1dd69151c0067361bf6d1eef40cd6c752559 by Boudhayan Gupta.
Committed on 11/01/2016 at 18:57.
Pushed by bgupta into branch 'master'.

Fix Save As, switch to Qt inbuilt Save As dialog
* Remember last save as location
* Correctly select mimetype and filename extension
* Confirm on overwrite
Related: bug 357818
FIXED-IN: 16.04

M  +1    -0    src/CMakeLists.txt
M  +15   -17   src/ExportManager.cpp
A  +34   -0    src/SpectacleConfig.cpp     [License: UNKNOWN]  *
A  +42   -0    src/SpectacleConfig.h     [License: UNKNOWN]  *

The files marked with a * at the end have a non valid license. Please read: http://techbase.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


http://commits.kde.org/kscreengenie/33aa1dd69151c0067361bf6d1eef40cd6c752559