Fix Save As, switch to Qt inbuilt Save As dialog * Remember last save as location * Correctly select mimetype and filename extension * Confirm on overwrite

BUG: 357817
BUG: 357818
FIXED-IN: 16.04